cmake_minimum_required(VERSION 3.21)
project(space_invaders)
set(SOURCES Pause.h Pause.cpp GameOver.h GameOver.cpp Button.h Button.cpp Ufo.h Ufo.cpp Textbox.cpp Textbox.h Window.cpp Window.h Bullet.h Bullet.cpp Game.cpp Game.h Ship.cpp Ship.h Enemy.cpp Enemy.h)
set(CMAKE_CXX_STANDARD 17)
find_package(SFML 2.5.1 COMPONENTS graphics audio network system REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
add_executable(space_invaders ${SOURCES} main.cpp)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE sfml-audio  sfml-network sfml-system sfml-graphics)
